# palmscript

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.docs  Dockerfile.ide  Makefile  PALMSCRIPT_REFERENCE.md  README.md  TRADELANG_REFERENCE.md  mkdocs.yml
.github/workflows/: docs.yml  publish-vscode-extension.yml
apps/cli/: Cargo.toml  build.rs
apps/cli/src/: args.rs  commands.rs  docs.rs  format.rs  inspect.rs  main.rs  runs.rs
apps/cli/tests/: cli.rs
apps/ide-server/: Cargo.toml
apps/lsp/: Cargo.toml
cli/: args.rs  commands.rs  data.rs  diagnostics.rs  format.rs  main.rs
crates/palmscript/: Cargo.toml
crates/palmscript-logger/: Cargo.toml
docker/: docs-nginx.conf
docs/: index.md
docs-private/contributing/: documentation.md
examples/: README.md  monthly_trend.rs  multi_interval.rs  pipeline.rs  rsi.rs  sma.rs  step_engine.rs
ide-server/: main.rs
ide-wasm/: Cargo.toml  index.html
ide-web/: app.js  index.html  server-index.html  style.css
scripts/: build_ide_web.sh
src/: ast.rs  backtest.rs  browser_ide.rs  builtins.rs  bytecode.rs  compiler.rs  data_prep.rs  diagnostic.rs  exchange.rs  ide.rs  ide_lsp.rs  interval.rs  lexer.rs  lib.rs  order.rs  output.rs  parser.rs  position.rs  runtime.rs  span.rs  talib.rs  token.rs  types.rs  vm.rs
tests/: backtest.rs  cli.rs  diagnostics_compile.rs  diagnostics_csv.rs  diagnostics_market.rs  docs_examples.rs  golden.rs  lexer.rs  parser.rs  pipeline.rs  sources.rs  ta_lib_parity.rs  vm.rs  walk_forward.rs
tools/: generate_talib_fixtures.py  sync_talib_metadata.py
(+397 files in other folders)
