[package]
name = "palmscript-cli-app"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[[bin]]
name = "palmscript"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
palmscript = { path = "../../crates/palmscript" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.7"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.13"
