[package]
name = "palmscript-cli-app"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[[bin]]
name = "palmscript"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
palmscript = { path = "../../crates/palmscript" }
palmscript-logger = { path = "../../crates/palmscript-logger" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.7"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.13"
